Fix name of package in CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 variables:
   AUTOBUILD_PACKAGE_DIR: sdl2
-  AUTOBUILD_PACKAGE_NAME: sdl2
+  AUTOBUILD_PACKAGE_NAME: SDL2
   AUTOBUILD_BUILD_ID: $CI_PIPELINE_ID
 
 # build:windows:
