--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,9 @@
 name: Build
-on: [push]
+on:
+  pull_request:
+  push:
+    branches: [main, actions]
+    tags: ['v*']
 jobs:
   build:
     strategy:
