build action: install ninja on all platforms

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,9 +14,15 @@ jobs:
     steps:
       - name: Setup Linux Build Dependencies
         if: ${{ runner.os == 'Linux' }}
-        shell: bash
-        run: DEBIAN_FRONTEND=noninteractive sudo apt-get install ninja-build
-      - uses: secondlife/action-autobuild@v3
+        run: sudo apt-get install ninja-build
+      - name: Setup macOS Build Dependencies
+        if: ${{ runner.os == 'macOS' }}
+        run: brew install ninja
+      - name: Setup Windows Build Dependencies
+        if: ${{ runner.os == 'Windows' }}
+        run: choco install ninja
+      - name: Build with autobuild
+        uses: secondlife/action-autobuild@v3
         with:
           addrsize: ${{ matrix.addrsize }}
   release:
