--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,15 +12,26 @@ jobs:
         addrsize: ["64"]
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Update apt
+        if: runner.os == 'Linux'
+        run: sudo apt update
+
       - name: Setup Linux Build Dependencies
-        if: ${{ runner.os == 'Linux' }}
-        run: sudo apt-get install ninja-build
+        if: runner.os == 'Linux'
+        run: >
+          sudo apt install -y mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev 
+          libxext-dev libibus-1.0-dev
+          fcitx-libs-dev libudev-dev libunwind-dev 
+          libwayland-dev libxkbcommon-dev libpulse-dev libsndio-dev ninja-build
+          
       - name: Setup macOS Build Dependencies
         if: ${{ runner.os == 'macOS' }}
         run: brew install ninja
+
       - name: Setup Windows Build Dependencies
         if: ${{ runner.os == 'Windows' }}
         run: choco install ninja
+      
       - name: Build with autobuild
         uses: secondlife/action-autobuild@v3
         with:
